--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>My page game</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
-<h1>Coming soon... Landinera</h1>
-<img src="images/Diamond.png">
+
+<div id="container">
+	<img id="logo" src="images/Diamond.png">
+	<h1>Coming soon... Landinera</h1>
+	
+</div>
+
+
+
 </body>
 </html>
