added a red background

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-git<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -10,11 +10,15 @@ git<!DOCTYPE html>
 <body>
 
 <div id="container">
-	<img id="logo" src="images/Diamond.png">
+	<img id="logo" src="images/laptop.png">
 	<h1>Coming soon... Landinera</h1>
 
 
 	<img id="logo" src="images/heart.png">
+	<h1>please subscribe</h1>
+
+
+	<img id="logo" src="images/briefcase.png">
 	<h1>please subscribe</h1>
 	
 </div>
